[package]
name = "discovery-rs"
version = "0.1.1"
edition = "2021"
description = "mDNS-SD TUI browser"
repository = "https://github.com/JustPretender/discovery-rs"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "command-line-utilities"]
exclude = ["static/*"]
homepage = "https://github.com/JustPretender/discovery-rs"
keywords = ["networking", "mdns", "discovery", "cli"]
readme = "README.md"
rust-version = "1.74.0"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
mdns-sd = "0.14.1"
flume = { version = "0.11.1", features = ["default", "select"] }
clap = "4.5.45"
clap_derive = "4.5.45"
regex = "1.11.1"
textwrap = "0.16.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
parking_lot = "0.12.4"
